Move some interface and entity to langchain4j-community-core